Fixed template: full width alignleft/alignright issue

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -5676,7 +5676,15 @@ a.to-the-top > * {
 		width: 100%;
 	}
 
-	/* Template: [Template Name] ------------- */
+	/* Template: Full Width ------------------ */
+
+	.template-full-width .wp-block-image .alignleft {
+		margin-right: 2rem;
+	}
+
+	.template-full-width .wp-block-image .alignright {
+		margin-left: 2rem;
+	}
 
 	/* Post: Archive ------------------------- */
 
@@ -6136,6 +6144,8 @@ a.to-the-top > * {
 		width: 100%;
 	}
 
+	.alignleft,
+	.alignright,
 	.entry-content > .alignleft,
 	.entry-content > p .alignleft,
 	.entry-content > .wp-block-image .alignleft,
